--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "@pixi/react": "^7.1.1",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -21,6 +22,8 @@
     "eslint-config-next": "13.4.19",
     "joi": "^17.9.2",
     "next": "13.4.19",
+    "normalize.css": "^8.0.1",
+    "pixi.js": "^7.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
