--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "knip": "^5.62.0",
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
+    "tsc-files": "^1.1.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
