--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "prepare": "husky",
-    "knip": "knip"
+    "knip": "knip",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test": "vitest --project=storybook",
+    "test:ui": "vitest --project=storybook --ui",
+    "test:coverage": "vitest --project=storybook --coverage"
   },
   "dependencies": {
     "@pixi/react": "^7.1.1",
@@ -22,22 +27,36 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.0",
     "@eslint/js": "^9.9.0",
+    "@mdx-js/react": "^3.1.0",
+    "@storybook/addon-a11y": "^9.1.2",
+    "@storybook/addon-docs": "^9.1.2",
+    "@storybook/addon-onboarding": "^9.1.2",
+    "@storybook/addon-vitest": "^9.1.2",
+    "@storybook/react-vite": "^9.1.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-storybook": "^9.1.2",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.9.0",
     "husky": "^9.1.7",
     "knip": "^5.62.0",
     "lint-staged": "^16.1.5",
+    "markdown-to-jsx": "^7.7.13",
+    "playwright": "^1.54.2",
     "prettier": "^3.6.2",
+    "storybook": "^9.1.2",
     "tsc-files": "^1.1.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "^3.2.4"
   }
 }
